# hwp-to-markdown

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
docs/: 구현계획.md  중간결과.md  최종결과.md
docs/sample-data/: 190820 (석간) .hwp 서식 유료 소프트웨어 없이 작성 가능(정보공개정책과)게시.hwp  190821 공공데이터 창업지원공간 오픈스퀘어-D 대구에 문 연다(공공데이터정책과).hwp  신의료기술_고시_일부개정안.hwpx  신의료기술_고시_전문.hwpx  회의록_부산시의회.hwpx
src/hwp_to_markdown/: __init__.py  api.py  cli.py  config.py  converter.py  hwpx_parser.py  libreoffice_converter.py
tests/: test_api.py  test_converter.py
